fixed responsive width and text coming out of box (final edit)

--- a/mod2solution/css/main.css
+++ b/mod2solution/css/main.css
@@ -7,19 +7,22 @@
     font-size: 20px;
     text-align: left;
     box-sizing: border-box;
+    /*word-wrap: break-word; */
 }
 
 h1 {
     font-style: bold;
     text-align: center;
     font-size: 175%;
+    margin-top: 50px;
+    margin-bottom: 50px;
    }
 
 #food {
        background-color: gray;
        padding: 25px 5px 5px 3px;
        border: 2px solid black;
-       margin: 15px;
+       margin: 15px 20px;
    }
 
 article>h2 {
@@ -29,7 +32,7 @@ article>h2 {
 
     float: right;
     border: 2px solid black;
-    width: 25%;
+    padding: 3px 10px;
     margin: -27px -7px 15px 100%;
 }
 /* Section TItle Formatting */
@@ -49,7 +52,6 @@ article>h2 {
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
       float: left;
-      border: 1px solid green;
     }
     .col-lg-1 {
       width: 8.33%;
@@ -60,8 +62,9 @@ article>h2 {
     .col-lg-3 {
       width: 25%;
     }
+    /* changed for purpose of exercise*/
     .col-lg-4 {
-      width: 33.33%;
+      width: calc(33.33% - 40px);
     }
     .col-lg-5 {
       width: 41.66%;
@@ -93,7 +96,6 @@ article>h2 {
   @media (min-width: 768px) and (max-width: 991px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
       float: left;
-      border: 1px solid green;
     }
     .col-md-1 {
       width: 8.33%;
@@ -110,8 +112,9 @@ article>h2 {
     .col-md-5 {
       width: 41.66%;
     }
+        /* changed for purpose of exercise*/
     .col-md-6 {
-      width: 50%;
+      width: calc(50% - 40px);
     }
     .col-md-7 {
       width: 58.33%;
@@ -129,6 +132,6 @@ article>h2 {
       width: 91.66%;
     }
     .col-md-12 {
-      width: 100%;
+      width: calc(100% - 40px);
     }
   }
